# DAVD_Composer

./: CMakeLists.txt  DAVD_.pro  FilterProcess.cpp  FilterProcess.h  FilterProcess_p.h  Image.cpp  Image.h  Image_p.h  README.md  SegmentationProcess.cpp  SegmentationProcess.h  SegmentationProcess_p.h  davdcomposernodefactory.cpp  davdcomposernodefactory.h  drawablelabel.cpp  drawablelabel.h  dtkCreatorMainWindow.cpp  dtkCreatorMainWindow.h  dtkCreatorMainWindow_p.h  interactivecomposernode.cpp  interactivecomposernode.h  main.cpp  pixmapreaderclass.cpp  pixmapreaderclass.h  pixmapwrapper.cpp  pixmapwrapper.h
nodes/: FilterNode.cpp  FilterNode.h  ImageReaderNode.cpp  ImageReaderNode.h  ImageWriterNode.cpp  ImageWriterNode.h  SegmentationNode.cpp  SegmentationNode.h
